--- a/core/style.css
+++ b/core/style.css
@@ -8,7 +8,7 @@ body {
 /* Navbar & Menu */
 .navbar {
   background-color: rgba(0, 0, 0, 0.8);
-  border-bottom: 4px solid #4caf50;
+  border-bottom: 4px solid #005CB4;
 }
 .navbar .navbar-brand {
   font-family: "Russo One", sans-serif !important;
@@ -28,25 +28,25 @@ body {
   color: #fff;
 }
 .navbar ul li.active .nav-link {
-  color: #4caf50;
-  border-bottom: 5px solid #4caf50;
+  color: #7289DA;
+  border-bottom: 5px solid #005CB4;
 }
 .navbar ul li.active .nav-link:hover {
   color: #66bc69;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
 }
 .navbar ul li.special .nav-link {
   color: #fff;
-  background-color: #4caf50;
-  border-top: 5px solid #4caf50;
+  background-color: #005CB4;
+  border-top: 5px solid #005CB4;
 }
 .navbar ul li.special .nav-link:hover {
   color: #fff;
-  background-color: #66bc69;
-  border-top: 5px solid #4caf50;
+  background-color: #005CB4;
+  border-top: 5px solid #005CB4;
 }
 .navbar .nav-item .nav-link:hover {
-  color: #4caf50;
+  color: #005CB4;
 }
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-nav .nav-link {
@@ -138,7 +138,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
 }
 .main-header .main-font-big {
   font-size: 8rem !important;
@@ -155,9 +155,9 @@ body {
 }
 .main-header .alert-success {
   color: #fff;
-  background-color: #4caf50;
-  border-color: #4caf50;
-  border-bottom-color: #4caf50;
+  background-color: #005CB4;
+  border-color: #005CB4;
+  border-bottom-color: #005CB4;
   border-bottom: 4px solid rgba(0, 0, 0, 0.1) !important;
   border-radius: 8px;
   cursor: pointer;
@@ -200,16 +200,16 @@ body {
 
 @keyframes glowing {
   0% {
-    box-shadow: 0 0 -10px #4caf50;
+    box-shadow: 0 0 -10px #005CB4;
   }
   40% {
-    box-shadow: 0 0 20px #4caf50;
+    box-shadow: 0 0 20px #005CB4;
   }
   60% {
-    box-shadow: 0 0 20px #4caf50;
+    box-shadow: 0 0 20px #005CB4;
   }
   100% {
-    box-shadow: 0 0 -10px #4caf50;
+    box-shadow: 0 0 -10px #005CB4;
   }
 }
 
@@ -224,7 +224,7 @@ body {
   background-color: rgba(0, 0, 0, 0.18);
   color: white;
   border-width: 2px;
-  border-color: green;
+  border-color: #005CB4;
 }
 
 .staffButton {
@@ -246,25 +246,25 @@ body {
 .feature-rightimg {
   margin-left: 60%;
   margin-top: -420px;
-  border: 5px solid green;
+  border: 5px solid #005CB4;
 }
 
 .feature-leftimg {
   margin-top: -370px;
   margin-right: 80% !important;
-  border: 5px solid green;
+  border: 5px solid #005CB4;
 }
 
 .feature-rightimgarena {
   margin-left: 60%;
   margin-top: -300px;
-  border: 5px solid green;
+  border: 5px solid #005CB4;
 }
 
 .feature-leftimgarena {
   margin-top: -300px;
   margin-right: 80% !important;
-  border: 5px solid green;
+  border: 5px solid #005CB4;
 }
 
 .feature-right {
@@ -338,7 +338,7 @@ body {
   font-family: "Russo One", sans-serif !important;
   font-weight: 300;
   color: #fff;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
 }
 .main-session-info .session-info-text {
   font-size: 100%;
@@ -349,20 +349,20 @@ body {
 
 .bordered {
   border-color: #4caf4f59;
-  border-bottom: 4px solid green;
+  border-bottom: 4px solid #005CB4;
   padding-bottom: 50px;
 }
 
 .btn-primary {
   color: #fff !important;
-  background-color: #4caf4fb9;
-  border-color: #4caf4f59;
+  background-color: #7289DA;
+  border-color: #7289DA;
   border-bottom: 4px solid rgba(0, 0, 0, 0.1);
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #4caf4f;
-  border-color: #4caf4f;
+  background-color: #7289dae3;
+  border-color: #7289dae3;
 }
 
 /* Others Pages header - Blank Page */
@@ -379,7 +379,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
 }
 
 .page-header2 {
@@ -395,7 +395,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
 }
 
 .page-header2 .page-font-big {
@@ -425,7 +425,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
 }
 
 .page-header3 .page-font-big {
@@ -455,7 +455,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
 }
 
 .left-img {
@@ -503,7 +503,7 @@ body {
   font-family: "Russo One", sans-serif !important;
   font-weight: 300;
   color: #222;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
 }
 .section-text-page .session-info-text {
   font-size: 100%;
@@ -512,19 +512,23 @@ body {
   color: #222;
 }
 
+.carousel-image{
+  height: 718px;
+}
+
 /* Footer */
 .main-footer {
   color: #fff;
   background-color: #101010;
   padding: 1.5rem;
-  border-top: 4px solid #4caf50;
+  border-top: 4px solid #005CB4;
 }
 .main-footer h4 {
   font-family: "Russo One", sans-serif !important;
   font-weight: 100 !important;
   line-height: 1.1 !important;
   color: #fff;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
 }
 .main-footer-partners {
   color: #fff;
@@ -536,7 +540,7 @@ body {
   font-weight: 100 !important;
   line-height: 1.1 !important;
   color: #fff;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
 }
 .main-footer-partners .footer-partners {
   -webkit-filter: grayscale(100%);
@@ -616,14 +620,14 @@ ul.footer-links li a:hover {
 
 .main-img-left {
   width: 100%;
-  border: 14px solid #4caf50;
+  border: 14px solid #005CB4;
   transform: rotate(-2deg);
   box-shadow: -0.5ex 0.5ex 4px #eee, 0.5em -0.5ex 2px #ddd;
   border-radius: 4px !important;
 }
 .main-img-right {
   width: 100%;
-  border: 14px solid #4caf50;
+  border: 14px solid #005CB4;
   transform: rotate(2deg);
   box-shadow: -0.5ex 0.5ex 4px #eee, 0.5em -0.5ex 2px #ddd;
   border-radius: 4px !important;
@@ -774,13 +778,13 @@ h1 {
 }
 .title-h3 {
   max-width: fit-content;
-  border-bottom: 5px solid #4caf50;
+  border-bottom: 5px solid #005CB4;
   content: "";
 }
 .title-h3-center::after {
   width: 50%;
   height: 5px;
-  background-color: #4caf50;
+  background-color: #005CB4;
   position: absolute;
   left: 25%;
   z-index: 1;
@@ -844,7 +848,7 @@ h1 {
   perspective: 1000px;
   background-color: rgba(0, 0, 0, 0.18);
   border-width: 2px;
-  border-color: green; /* Remove this if you don't want the 3D effect */
+  border-color: #005CB4; /* Remove this if you don't want the 3D effect */
 }
 
 /* This container is needed to position the front and back side */
